--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,15 @@
-# Dependencies
 node_modules/
-.pnp
-.pnp.js
-
-# Production
 dist/
-build/
-
-# Testing
 coverage/
-*.lcov
-.nyc_output
-
-# Environment
+*.log
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# OS Files
-.DS_Store
-Thumbs.db
-
-# IDE
-*.code-workspace
-.vscode/
-.cursor/
-.idea/
-*.swp
-*.swo
-*~
-
-# Claude settings
-.claude/
-
-# OAuth tokens and credentials
-tokens/
-*.token.json
 .evernote-token.json
-.evernote-credentials.json
-
-# Temp files
-tmp/
-temp/
-*.tmp
+.DS_Store
+*.tsbuildinfo
+.nyc_output/
+junit.xml
+test-results/
