--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@verygoodplugins/mcp-evernote",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "MCP server for Evernote integration with note management and synchronization",
   "main": "dist/index.js",
   "type": "module",
@@ -18,6 +18,11 @@
     "auth": "tsx src/auth-standalone.ts",
     "auth:prod": "node dist/auth-standalone.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest __tests__/unit",
+    "test:integration": "jest __tests__/integration",
+    "test:e2e": "jest __tests__/e2e",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "prepublishOnly": "npm run build",
@@ -47,21 +52,32 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
-    "evernote": "^2.0.5",
-    "node-fetch": "^3.3.2",
-    "zod": "^3.22.4",
     "dotenv": "^16.3.1",
+    "evernote": "^2.0.5",
     "express": "^4.18.2",
-    "open": "^8.4.2"
+    "marked": "^12.0.2",
+    "mime-types": "^2.1.35",
+    "node-fetch": "^3.3.2",
+    "open": "^8.4.2",
+    "sanitize-html": "^2.13.0",
+    "turndown": "^7.2.0",
+    "turndown-plugin-gfm": "^1.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
+    "@types/mime-types": "^2.1.3",
+    "@types/node": "^20.10.0",
+    "@types/sanitize-html": "^2.13.0",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "audit-ci": "^6.6.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   }
