--- a/package.json
+++ b/package.json
@@ -83,6 +83,6 @@
     "prettier": "^3.1.0",
     "ts-jest": "^29.4.5",
     "tsx": "^4.6.0",
-    "typescript": "^5.3.0"
+    "typescript": "5.3.3"
   }
 }
