chore(cursor): stop tracking local AutoMem cursor rule

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ coverage/
 .env.test.local
 .env.production.local
 .evernote-token.json
+.evernote-credentials.json
 .cursor/mcp.json
 .cursor/rules/automem.mdc
 .DS_Store
