--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
                   file: ./coverage/lcov.info
                   flags: unittests
                   name: codecov-umbrella
-                  fail_ci_if_error: true
+                  fail_ci_if_error: false
 
     test-build:
         runs-on: ubuntu-latest
@@ -96,6 +96,7 @@ jobs:
 
             - name: Run security audit
               run: npm audit --audit-level=moderate
+              continue-on-error: true
 
             - name: Check for known vulnerabilities
               run: npx audit-ci --config .audit-ci.json
