--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     - cron: "0 0 * * 0" # Weekly on Sunday
   push:
-    branches: [main]
+    branches: [main, develop]
   pull_request:
-    branches: [main]
+    branches: [main, develop]
   workflow_dispatch:
 
 permissions:
