--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -43,27 +43,18 @@ jobs:
           manifest-file: .release-please-manifest.json
 
   npm-publish:
-    needs: release-please
-    if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "24"
           registry-url: "https://registry.npmjs.org"
-
       - run: npm ci
-      - run: npm run build
+      - run: npm run build --if-present
       - run: npm test
-
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: npm publish
 
   announce:
     needs: [release-please, npm-publish]
