--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "url": "https://github.com/verygoodplugins/mcp-evernote/issues"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "cheerio": "1.1.0",
     "dotenv": "^16.3.1",
     "evernote": "^2.0.5",
     "express": "^4.18.2",
@@ -66,8 +67,7 @@
     "sanitize-html": "^2.13.0",
     "turndown": "^7.2.0",
     "turndown-plugin-gfm": "^1.0.2",
-    "zod": "^3.22.4",
-    "cheerio": "1.1.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
