--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -59,7 +59,7 @@ jobs:
           node-version: "24"
           registry-url: "https://registry.npmjs.org"
 
-      - run: npm ci
+      - run: npm install
       - run: npm run build
       - run: npm test
       - run: npm publish --provenance --access public
